--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "leweex95",email = "csibi.levente14@gmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.11,<3.15"
+requires-python = ">=3.11,<3.13"
 dependencies = [
     "numpy (>=2.3.3,<3.0.0)",
     "pandas (>=2.3.2,<3.0.0)",
@@ -20,6 +20,7 @@ dependencies = [
     "tqdm (>=4.67.1,<5.0.0)",
     "plotly (>=6.3.0,<7.0.0)",
     "kaleido (>=1.1.0,<2.0.0)",
+    "torch (>=2.8.0)",
 ]
 
 [tool.poetry]
